@@ -4,5 +4,6 @@ ide-modules-${kernel:Version}
 cdrom-core-modules-${kernel:Version}
 cdrom-modules-${kernel:Version}
 scsi-core-modules-${kernel:Version}
+scsi-common-modules-${kernel:Version}
 scsi-modules-${kernel:Version}
 usb-storage-modules-${kernel:Version}
