@@ -24,8 +24,7 @@ floppy-retriever
 # net installation support
 net-retriever
 download-installer
-netcfg-static
-netcfg-dhcp
+netcfg
 choose-mirror
 hw-detect
 ethdetect
