@@ -7,6 +7,5 @@ input-modules-${kernel:Version}
 console-keymaps-at
 console-keymaps-usb
 kbd-chooser
-netcfg-dhcp
 dhcp-client-udeb
 
