@@ -8,7 +8,6 @@ languagechooser
 choose-mirror
 net-retriever
 load-installer
-netcfg-static
 cdebconf-newt-udeb
 kbd-chooser
 rootskel-locale
@@ -16,7 +15,7 @@ bogl-bterm-udeb
 di-utils-terminfo
 hw-detect
 ethdetect
-netcfg-dhcp
+netcfg
 
 # there's space for an editor
 nano-udeb
