@@ -1,5 +1,4 @@
 dhcp-client-udeb
-netcfg-dhcp
 fdisk-udeb
 # FIXME: currently contains fdisk-udeb as a workaround for anna not
 # fetching it due to wrong dependencies/priorities, although it is
